src/objects/Project_Selection__c.object
<CustomObject>
    <description>Case Study Number 4</description>
    <fields>
        <fullName>ProjectPickList_del__c</fullName>
        <label>ProjectPickList</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>BFS</fullName>
                </value>
                <value>
                    <fullName>OTHERS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>TEXT(ProjectPickList_del__c) + &apos;-Project&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusPickList__c</fullName>
        <label>StatusPickList</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ProjectPickList_del__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>InProgress</fullName>
                </value>
                <value>
                    <fullName>InQueue</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>&quot;Project is &quot;+TEXT(StatusPickList__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Project Selection</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Selection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Selection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>